src/test/ui/typeof/type_mismatch.stderr
error[E0516]: `typeof` is a reserved keyword but unimplemented
  --> $DIR/type_mismatch.rs:5:12
   |
LL |     let b: typeof(a) = 1i8;
   |            ^^^^^^^^^ reserved keyword

error[E0308]: mismatched types
  --> $DIR/type_mismatch.rs:5:24
   |
LL |     let b: typeof(a) = 1i8;
   |            ---------   ^^^ expected `u8`, found `i8`
   |            |
   |            expected due to this
   |
help: change the type of the numeric literal from `i8` to `u8`
   |
LL |     let b: typeof(a) = 1u8;
   |                         ~~

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0516.
For more information about an error, try `rustc --explain E0308`.
